# book-generation-agent

./: .gitignore  README.md  agent.py  pyproject.toml  requirements.txt  system_prompt.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
books/: data_types_in_python.md  python_datatypes.md  python_variables.md  write_a_topic_on_python_datatypes.md  writea_topic_on_python_variables.md
website/: .gitignore  docusaurus.config.ts  package-lock.json
website/docs/: intro.md
