[project]
name = "book-generation-agent"
version = "0.1.0"
description = "An AI-powered educational content generation agent using OpenAI's Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai-agents>=0.4.1",
]
